Focus on PureCN 1.2 was to dramatically improve user-friendliness:

- GATK requirement was dropped: PureCN now comes with functionality to
  generate coverage data when GATK is not available.
- Experimental support for VCFs generated by other callers than MuTect 1.1.7
- Experimental automatic curation of results.
- Output plots were polished.
- Both numerical and non-numerical chromosome names (1 vs. chr1) supported.
- Better integration into existing copy number pipelines.

-------------------------------------------------------------------------------

Other major enhancements

- More thorough initial grid search should minimize cases where purity/ploidy
  is wrong because the solution was not considered.
- More robust and accurate likelihood model.  
- Support for SNVs outside the copy number interval file
  (remove.off.target.snvs=FALSE).   
- Improved segmentation and log-ratio normalization.  
- Support for non-human samples.
- Support for 100% pure samples (matched normal mode only).
- Faster SNV fitting.

-------------------------------------------------------------------------------

API changes

- New functions: autoCurateResults, bootstrapResults, 
    calculateBamCoverageByInterval, calculateGCContentByInterval,
    calculatePowerDetectSomatic, callAlterations, callLOH, getDiploid
    getSexFromVcf
- Deprecated functions: segmentationPSCBS

-------------------------------------------------------------------------------

Other new features

- Functions to calculate power to detect mono-clonal and sub-clonal somatic
  mutations (Carter et al., Nature Biotech, 2012) were added.

-------------------------------------------------------------------------------

Planned features for PureCN 1.4 (Bioconductor 3.5)

- Support for indels.
- Better runtime performance by ignoring unlikely solutions early.  
- Switch to S4 data structures.

-------------------------------------------------------------------------------