@@ -31,10 +31,11 @@ import(DNAcopy)
 import(IRanges)
 import(VariantAnnotation)
 importFrom("Biostrings", "letterFrequency")
-importFrom("GenomeInfoDb", "seqnames")
+importFrom("GenomeInfoDb", "renameSeqlevels", "seqnames")
 importFrom("GenomicRanges", "GRanges")
 importFrom("RColorBrewer", "brewer.pal")
-importFrom("Rsamtools", "ScanBamParam", "scanBamFlag", "scanBam", "scanFa")
+importFrom("Rsamtools", "headerTabix", "ScanBamParam", "scanBamFlag", 
+    "scanBam", "scanFa", "TabixFile")
 importFrom("S4Vectors", "queryHits", "subjectHits", "DataFrame")
 importFrom("SummarizedExperiment", "rowRanges")
 importFrom("data.table", "data.table")
