@@ -926,4 +926,37 @@ test.num.copy[i], prior.K))
     exonsUsed
 }
 
+.addCosmicCNT <- function(vcf, cosmic.vcf.file, verbose=TRUE) {
+    if (!is.null(info(vcf)$Cosmic.CNT)) {
+        if (verbose) message("VCF already COSMIC annotated. Skipping.")
+        return(vcf)        
+    }
+    cosmicSeqs <- headerTabix(TabixFile(cosmic.vcf.file))$seqnames
+    if (!length(intersect(seqlevels(vcf), cosmicSeqs))) {
+        if (length(intersect(gsub("chr","",seqlevels(vcf)), cosmicSeqs))>=24) {
+            vcf <- renameSeqlevels(vcf, gsub("chr","",seqlevels(vcf)))
+        } else {
+            warning("Cannot match chromosome names in cosmic.vcf.file with the ",
+                "ones in vcf.file. Giving up COSMIC annotation.")
+            return(vcf)
+        }    
+    }    
+    cosmic.vcf <- readVcf(cosmic.vcf.file, genome=genome(vcf)[1],  
+        ScanVcfParam(which = rowRanges(vcf)))
+    ov <- findOverlaps(vcf, cosmic.vcf, type="equal")
+    idx <- as.logical(alt(vcf[queryHits(ov)]) ==
+        alt(cosmic.vcf[subjectHits(ov)]))
+    ov <- ov[idx]
+
+    if (!length(ov)) return(vcf)
+    
+    newInfo <- DataFrame(
+        Number=1, Type="Integer",
+        Description="How many samples in Cosmic have this mutation",
+        row.names="Cosmic.CNT")
+    info(header(vcf)) <- rbind(info(header(vcf)), newInfo)
+    info(vcf)$Cosmic.CNT <- NA
+    info(vcf)$Cosmic.CNT[queryHits(ov)] <- info(cosmic.vcf[subjectHits(ov)])$CNT
+    vcf
+}
 
